--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,8 @@
 {
-  "version": 2,
-  "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*\\.php)",
-      "methods": ["POST", "GET", "PUT", "DELETE", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Credentials": "true",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization",
-        "Access-Control-Allow-Methods": "POST, GET, PUT, DELETE, OPTIONS"
-      },
-      "dest": "/api/$1"
+      "source": "/api/(.*)",
+      "destination": "https://flow-app.alwaysdata.net/flow-application-cc/api/$1"
     }
   ]
 }
