--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,7 +1,7 @@
-Header always set Access-Control-Allow-Origin "https://flow-chi-dun.vercel.app"
-Header always set Access-Control-Allow-Credentials "true"
-Header always set Access-Control-Allow-Methods "POST, OPTIONS"
-Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
+Header set Access-Control-Allow-Origin "https://flow-chi-dun.vercel.app"
+Header set Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
+Header set Access-Control-Allow-Headers "Content-Type"
+Header set Access-Control-Allow-Credentials "true"
 
 RewriteEngine On
 RewriteCond %{REQUEST_METHOD} OPTIONS
