--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://flow-app.alwaysdata.net/flow-application-cc/api/$1"
+      "destination": "https://flow-backend-yxdw.onrender.com/$1"
     }
   ]
 }
