--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,6 +1,6 @@
-Header set Access-Control-Allow-Origin "https://flow-chi-dun.vercel.app"
-Header set Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
-Header set Access-Control-Allow-Headers "Content-Type"
+Header set Access-Control-Allow-Origin "https://flow-i3g6.vercel.app"
+Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+Header set Access-Control-Allow-Headers "Content-Type, Authorization"
 Header set Access-Control-Allow-Credentials "true"
 
 RewriteEngine On
